# RaspiDetectMotion

./: CMakeLists.txt  Definitions.cmake  main.cpp  raspberryCamera.code-workspace
dependencies/raspbian-11/aarch64/opencv/include/opencv4/opencv2/: cvconfig.h
dependencies/raspbian-11/aarch64/opencv/lib/: libopencv_aruco.so.4.6.0  libopencv_calib3d.so.4.6.0  libopencv_features2d.so.4.6.0  libopencv_flann.so.4.6.0  libopencv_highgui.so.4.6.0  libopencv_imgcodecs.so.4.6.0  libopencv_videoio.so.4.6.0
dependencies/raspbian-11/aarch64/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules.cmake
dependencies/ubuntu-22.04/x86_64/opencv/lib/: libopencv_aruco.so.4.6.0  libopencv_calib3d.so.4.6.0  libopencv_features2d.so.4.6.0  libopencv_flann.so.4.6.0  libopencv_highgui.so.4.6.0  libopencv_imgcodecs.so.4.6.0  libopencv_videoio.so.4.6.0
dependencies/ubuntu-22.04/x86_64/opencv/lib/cmake/opencv4/: OpenCVModules-release.cmake  OpenCVModules.cmake
